--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,9 +5,9 @@
 // @import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-$font-family: 'Inconsolata', monospace !default;
-$body-font-family: 'Inconsolata', monospace !default;
-$heading-font-family: 'Inconsolata', monospace !default;
+$font-family: 'Bitter', serif !default;
+$body-font-family: 'Bitter', serif !default;
+$heading-font-family: 'Bitter', serif !default;
 $font-size-root: 18px;
 $font-weights: (
   'thin': 200
